2013-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Shell-related portability fixes in Olena's Makefiles.

	* doc/Makefile.am: Rewrite patterns ``perl X `find Y''' as
	``find Y -exec perl X {} \;'' to avoid long `perl' command lines and
	please the shell.

2013-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Use `perl -pi' instead of `sed -i' in Olena.

	* build-aux/mln_add_file,
	* doc/Makefile.am,
	* lrde-scmstats.sh:
	Here, as `sed -i' (with no backup file) behaves differently on
	GNU/Linux and Mac OS X.  For more information, see:
	http://stackoverflow.com/questions/5694228/.

2013-04-18  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove unstable viewer.

	* GScribo/BUGS,
	* GScribo/GScribo.pro,
	* GScribo/GScribo.pro.user,
	* GScribo/GScribo.pro.user.1.3,
	* GScribo/PagesWidget/pagesdelegate.cpp,
	* GScribo/PagesWidget/pagesdelegate.h,
	* GScribo/PagesWidget/pagesmodel.cpp,
	* GScribo/PagesWidget/pagesmodel.h,
	* GScribo/PagesWidget/pageswidget.cpp,
	* GScribo/PagesWidget/pageswidget.h,
	* GScribo/Preferences/generaloptions.cpp,
	* GScribo/Preferences/generaloptions.h,
	* GScribo/Preferences/generaloptions.ui,
	* GScribo/Preferences/ocroptions.cpp,
	* GScribo/Preferences/ocroptions.h,
	* GScribo/Preferences/ocroptions.ui,
	* GScribo/Preferences/optionwidget.h,
	* GScribo/Preferences/preferencesdialog.cpp,
	* GScribo/Preferences/preferencesdialog.h,
	* GScribo/Preferences/preferencesdialog.ui,
	* GScribo/Preferences/preprocessingoptions.cpp,
	* GScribo/Preferences/preprocessingoptions.h,
	* GScribo/Preferences/preprocessingoptions.ui,
	* GScribo/Preferences/segmentationoptions.cpp,
	* GScribo/Preferences/segmentationoptions.h,
	* GScribo/Preferences/segmentationoptions.ui,
	* GScribo/Processing/preprocess.cpp,
	* GScribo/Processing/preprocess.h,
	* GScribo/Processing/process.cpp,
	* GScribo/Processing/process.h,
	* GScribo/Processing/progressdialog.cpp,
	* GScribo/Processing/progressdialog.h,
	* GScribo/Processing/runner.cpp,
	* GScribo/Processing/runner.h,